--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,8 @@
 }
 
 .App-header {
+  background-image: url('./background.jpg');
+  background-size: cover;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
