--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 .responsive {
   width: 50%;
   height: 50%;
+  background-color: transparent !important;
 }
 
 @media (prefers-reduced-motion: no-preference) {
