add low effort about section

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+#about-sub {
+  color:white;
+  border: 2px solid red;
+  position: fixed;
+  font-size: 13pt;
+  text-align:left;
+  width: 400px;
+  height: 100%;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
