--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,11 @@
   color:white;
   border: 2px solid red;
   position: fixed;
-  font-size: 13pt;
+  font-size: 14pt;
   text-align:left;
-  width: 400px;
+  width: 500px;
   height: 100%;
+  background: black;
 }
 
 .App-logo {
