--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,11 @@
   background-color: white;
 }
 #about-sub {
-  color:white;
+  color: white;
   border: 2px solid red;
   position: fixed;
   font-size: 14pt;
-  text-align:left;
+  text-align: left;
   width: 500px;
   height: 100%;
   background: black;
@@ -28,7 +28,13 @@
 }
 
 .card {
-  border: none !important; 
+  border: none !important;
+}
+
+.card-body {
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .spicymeme {
@@ -56,7 +62,7 @@
 }
 
 .App-header {
-  background-image: url('./itl.cat_vaporwave-wallpaper_23718.png');
+  background-image: url('./cyberpunk-wallpaper-hd.jpg');
   background-size: cover;
   min-height: 100vh;
   display: flex;
@@ -64,7 +70,6 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
@@ -73,6 +78,11 @@
 
 .navbar-brand > a {
   color: #cbdfbd !important;
+}
+
+.bottomText {
+  background-color: hotpink;
+  color: black;
 }
 
 @keyframes App-logo-spin {
