--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,11 @@
   border: none !important;
 }
 
+.card-head {
+  background-color: hotpink !important;
+  color: black;
+}
+
 .card-body {
   -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
