--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@
 }
 
 .App-header {
-  background-image: url('./background.png');
+  background-image: url('./background-yale.png');
   background-size: cover;
   min-height: 100vh;
   display: flex;
